--- a/05-dom-document-loading/1-notification/index.html
+++ b/05-dom-document-loading/1-notification/index.html
@@ -10,11 +10,15 @@
 <script type="module">
   import NotificationMessage from './index.js';
 
+  const btn1 = document.getElementById('btn1')
+
   btn1.addEventListener('click', () => {
     const notification = new NotificationMessage('Hello World', {
       duration: 2000,
       type: 'success'
     });
+
+    document.body.append(notification.element)
 
     notification.show();
   });
